RESOLVED FIXED214014
Web process sometimes crashes when translating an article on spiegel.de
https://bugs.webkit.org/show_bug.cgi?id=214014
Summary Web process sometimes crashes when translating an article on spiegel.de
Wenson Hsieh
Reported 2020-07-06 16:35:20 PDT
Attachments
Patch (4.96 KB, patch)
2020-07-06 16:45 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-06 16:45:25 PDT
EWS
Comment 2 2020-07-06 17:54:28 PDT
Committed r264003: <https://trac.webkit.org/changeset/264003> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403634 [details].
Note You need to log in before you can comment on or make changes to this bug.