Web process sometimes crashes when translating an article on spiegel.de https://bugs.webkit.org/show_bug.cgi?id=214014 <rdar://problem/65099253>

Reviewed by Tim Horton.

Source/WebCore:

The crash happens because we try to make a BoundaryPoint (using `makeBoundaryPoint`) out of an orphaned
`Position` that is anchored before or after the anchor node (more specifically, either `PositionIsBeforeAnchor`
or `PositionIsAfterAnchor`). In `makeBoundaryPoint`, we'll avoid the early `WTF::nullopt` return since the
position is non-null, but then try to access the container node, which is null in this case because the anchor
node has been unparented.

Fix this by not attempting to observe orphaned DOM positions when extracting content for translation.

Test: TextManipulation.StartTextManipulationAvoidCrashWhenExtractingOrphanedPositions

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::observeParagraphs):

Tools:

Add a test case that dynamically adds an `object` element, immediately removes it, and then adds a chunk of text
and verifies that the text manipulation delegate method for new content is invoked.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:


Canonical link: https://commits.webkit.org/226821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264003 268f45cc-cd09-0410-ab3c-d52691b4dbfc